{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 39,
  "lineage": "681a7c54-3676-d267-b6f0-138e3632730b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_proj_1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01c4e7f7d9a667a59",
            "arn": "arn:aws:ec2:sa-east-1:710353053618:instance/i-043056fa14d0c17a6",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043056fa14d0c17a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03f85df93af66d2de"
              }
            ],
            "primary_network_interface_id": "eni-03f85df93af66d2de",
            "private_dns": "ip-10-0-1-97.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.97",
            "public_ip": "56.125.216.245",
            "region": "sa-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ca9a10f748a34f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0da14359c7786c1",
            "tags": {
              "Name": "Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ee14b8ba4d06d73",
              "sg-0eba53774b6edf38f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710353053618",
            "id": "i-043056fa14d0c17a6",
            "region": "sa-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.dev_proj_1_public_key",
            "module.networking.data.aws_subnet.subnet_publica_1",
            "module.networking.data.aws_vpc.rede_existente",
            "module.security_group.aws_security_group.api_sg",
            "module.security_group.data.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_proj_1_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
            "arn_suffix": "targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/health",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:sa-east-1:710353053618:loadbalancer/app/dev-proj-1-alb/a97053098d9b070b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-proj-1-tg-restAPI",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62"
          },
          "dependencies": [
            "module.networking.data.aws_vpc.rede_existente"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62,i-043056fa14d0c17a6,5000",
            "port": 5000,
            "region": "sa-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
            "target_id": "i-043056fa14d0c17a6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710353053618",
            "port": 5000,
            "region": "sa-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
            "target_id": "i-043056fa14d0c17a6"
          },
          "dependencies": [
            "module.ec2.aws_instance.dev_proj_1_ec2",
            "module.ec2.aws_key_pair.dev_proj_1_public_key",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.data.aws_subnet.subnet_publica_1",
            "module.networking.data.aws_vpc.rede_existente",
            "module.security_group.aws_security_group.api_sg",
            "module.security_group.data.aws_security_group.ec2_sg_ssh_http_https"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "aws_lb",
      "name": "alb_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:loadbalancer/app/dev-proj-1-alb/a97053098d9b070b",
            "arn_suffix": "app/dev-proj-1-alb/a97053098d9b070b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-proj-1-alb-1131325158.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:loadbalancer/app/dev-proj-1-alb/a97053098d9b070b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-proj-1-alb",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-0eba53774b6edf38f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049f4db2071ee47e6"
              },
              {
                "subnet_id": "subnet-0d0da14359c7786c1"
              }
            ],
            "subnets": [
              "subnet-049f4db2071ee47e6",
              "subnet-0d0da14359c7786c1"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-0ed11de6c1a5d0d65",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6",
            "certificate_arn": "arn:aws:acm:sa-east-1:710353053618:certificate/9edafda3-6d5b-451a-8062-ea57c9adf9ee",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-lb-target-group/992afe96ce7c24ea",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-lb-target-group/992afe96ce7c24ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:loadbalancer/app/dev-proj-1-alb/a97053098d9b070b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "sa-east-1",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2019-08",
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "python_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:targetgroup/dev-proj-1-tg-restAPI/d82bbca6118c6f62",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener-rule/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6/e9faf9027defa4de",
            "condition": [
              {
                "host_header": [
                  {
                    "regex_values": [],
                    "values": [
                      "felipeprojects.dev",
                      "www.felipeprojects.dev"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener-rule/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6/e9faf9027defa4de",
            "listener_arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6",
            "priority": 20,
            "region": "sa-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:710353053618:listener-rule/app/dev-proj-1-alb/a97053098d9b070b/8e87a7ded25c07b6/e9faf9027defa4de"
          },
          "dependencies": [
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.load_balancer.data.aws_lb.alb_principal",
            "module.load_balancer.data.aws_lb_listener.https_listener",
            "module.networking.data.aws_vpc.rede_existente"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_privada_rds_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:subnet/subnet-0a6e95337fc353c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6e95337fc353c12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710353053618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_privada_rds_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:subnet/subnet-00e74ecc03235198f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e74ecc03235198f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710353053618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_publica_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:subnet/subnet-0d0da14359c7786c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0da14359c7786c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710353053618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_publica_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:subnet/subnet-049f4db2071ee47e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049f4db2071ee47e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710353053618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "state": "available",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "rede_existente",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:vpc/vpc-0ed11de6c1a5d0d65",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bab6e6157214e22c",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a9184b07e201ca2e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed11de6c1a5d0d65",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092edc2b4706af86f",
            "owner_id": "710353053618",
            "region": "sa-east-1",
            "tags": {
              "Name": "dev-proj-jenkins-sa-east-vpc-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:security-group/sg-0eba53774b6edf38f",
            "description": "Enable the Port 22 (SSH), Port 80 (HTTP) \u0026 Port 443 (HTTPS)",
            "filter": null,
            "id": "sg-0eba53774b6edf38f",
            "name": "SG for EC2 to enable SSH(22), HTTP(80) and HTTPS(443)",
            "region": "sa-east-1",
            "tags": {
              "Name": "Security Group to allow ssh(22), http(80), https(443)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:security-group/sg-08ee14b8ba4d06d73",
            "description": "Enable the Port 5000 for python api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing requests",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ee14b8ba4d06d73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 5000 for python api",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "python-api-sg",
            "name_prefix": "",
            "owner_id": "710353053618",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group to allow port 5000"
            },
            "tags_all": {
              "Name": "Security Group to allow port 5000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710353053618",
            "id": "sg-08ee14b8ba4d06d73",
            "region": "sa-east-1"
          },
          "dependencies": [
            "module.networking.data.aws_vpc.rede_existente"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:710353053618:security-group/sg-0d11708c83eb9ec3e",
            "description": "Allow access to RDS from EC2 present in public subnet",
            "egress": [],
            "id": "sg-0d11708c83eb9ec3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "710353053618",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed11de6c1a5d0d65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "710353053618",
            "id": "sg-0d11708c83eb9ec3e",
            "region": "sa-east-1"
          },
          "dependencies": [
            "module.networking.data.aws_subnet.subnet_privada_rds_1",
            "module.networking.data.aws_subnet.subnet_privada_rds_2",
            "module.networking.data.aws_subnet.subnet_publica_1",
            "module.networking.data.aws_subnet.subnet_publica_2",
            "module.networking.data.aws_vpc.rede_existente"
          ]
        }
      ]
    }
  ]
}